[gd_scene load_steps=38 format=2]

[ext_resource path="res://Imports/SFX/peelOutRelease.wav" type="AudioStream" id=1]
[ext_resource path="res://Scripts/States/On_ground.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Character_animator.gd" type="Script" id=3]
[ext_resource path="res://Scripts/States/On_air.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Character_vfx.gd" type="Script" id=5]
[ext_resource path="res://Imports/SFX/spinDashCharge.wav" type="AudioStream" id=6]
[ext_resource path="res://Scripts/States/Super_peel_out.gd" type="Script" id=7]
[ext_resource path="res://Scripts/States/Spin_dash.gd" type="Script" id=8]
[ext_resource path="res://Imports/SFX/spinDashRelease.wav" type="AudioStream" id=9]
[ext_resource path="res://Scripts/Player_physics.gd" type="Script" id=10]
[ext_resource path="res://Imports/Sprites/Sonic.png" type="Texture" id=11]
[ext_resource path="res://Imports/SFX/brake.wav" type="AudioStream" id=12]
[ext_resource path="res://Scripts/State_machine.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Audio_player.gd" type="Script" id=14]
[ext_resource path="res://Imports/SFX/spin.wav" type="AudioStream" id=15]
[ext_resource path="res://Imports/Sprites/spinDash.png" type="Texture" id=16]
[ext_resource path="res://Imports/SFX/jump.wav" type="AudioStream" id=17]
[ext_resource path="res://Imports/SFX/instaShield.wav" type="AudioStream" id=18]
[ext_resource path="res://Imports/Sprites/instaShield.png" type="Texture" id=19]
[ext_resource path="res://Imports/SFX/peelOutCharge.wav" type="AudioStream" id=20]

[sub_resource type="Animation" id=1]
resource_name = "Braking"
length = 0.52
step = 0.13
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133686, 0.26, 0.39 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=2]
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.7, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 10.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.48712, 1.8, 2.08852, 2.4, 3.1, 3.4, 3.7, 4, 4.3, 4.6, 4.88712, 5.2, 5.48852, 5.8, 6.5, 6.8, 7.1, 7.4, 7.7, 8, 8.28712, 8.6, 8.88852, 9.2, 9.9, 10.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7, 8, 7, 8, 7, 8, 9, 9, 7, 8, 7, 8, 7, 8, 7, 8, 9, 9, 7, 8, 7, 8, 7, 8, 7, 8, 9, 9, 10 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "LookDown"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "LookUp"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "PeelOut"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Pushing"
length = 2.1
loop = true
step = 0.53
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.53, 1.06, 1.59 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 30, 27, 30, 28, 30, 29, 30 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=11]
length = 0.24
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34, 35, 36 ]
}

[sub_resource type="Animation" id=12]
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 14, 15, 16 ]
}

[sub_resource type="Animation" id=13]
length = 0.28
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=14]
resource_name = "InstaShield"
length = 0.12
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 9.03
height = 6.05999

[sub_resource type="CircleShape2D" id=16]
radius = 9.0

[sub_resource type="RayShape2D" id=17]

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision/safe_margin = 0.1
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 13 )

[node name="OnGround" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="OnAir" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="SpinDash" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="SuperPeelOut" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Characters" type="Node2D" parent="."]
position = Vector2( 0, -4 )

[node name="Sonic" type="Sprite" parent="Characters"]
texture = ExtResource( 11 )
hframes = 17
vframes = 17
frame = 55
region_rect = Rect2( 0, 0, 48, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Characters/Sonic"]
anims/Braking = SubResource( 1 )
anims/Idle1 = SubResource( 2 )
anims/Idle2 = SubResource( 3 )
anims/Idle3 = SubResource( 4 )
anims/LookDown = SubResource( 5 )
anims/LookUp = SubResource( 6 )
anims/PeelOut = SubResource( 7 )
anims/Pushing = SubResource( 8 )
anims/Rolling = SubResource( 9 )
anims/Running = SubResource( 10 )
anims/SpinDashCharge = SubResource( 11 )
anims/Walking = SubResource( 12 )
script = ExtResource( 3 )

[node name="VFX" type="Node2D" parent="Characters"]
script = ExtResource( 5 )

[node name="ChargeDust" type="Sprite" parent="Characters/VFX"]
visible = false
position = Vector2( -19, 13 )
texture = ExtResource( 16 )
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Characters/VFX/ChargeDust"]
anims/ChargeDust = SubResource( 13 )

[node name="InstaShield" type="Sprite" parent="Characters/VFX"]
visible = false
position = Vector2( 0, 9 )
texture = ExtResource( 19 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Characters/VFX/InstaShield"]
anims/InstaShield = SubResource( 14 )

[node name="AudioPlayer" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="Jump" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 17 )
volume_db = -15.0

[node name="Brake" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="Spin" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="SpinDashCharge" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="SpinDashRelease" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="PeelOutCharge" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 20 )
volume_db = -10.0

[node name="PeelOutRelease" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="InstaShield" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 18 )
volume_db = -25.0

[node name="HighCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 15 )

[node name="LowCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 16 )

[node name="RayShape" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="LeftGroundSensor" type="RayCast2D" parent="."]
position = Vector2( -9, 0 )
enabled = true
cast_to = Vector2( 0, 36 )

[node name="RightGroundSensor" type="RayCast2D" parent="."]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 0, 36 )

[node name="RightWallSensor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 11, 0 )

[node name="LeftWallSensor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -11, 0 )

[connection signal="animation_finished" from="Characters/Sonic/AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
